assignments/pa2/cool.output
Terminals unused in grammar

   LE
   ERROR
   '>'


State 9 conflicts: 1 shift/reduce
State 14 conflicts: 1 shift/reduce
State 45 conflicts: 15 shift/reduce
State 56 conflicts: 3 shift/reduce
State 58 conflicts: 15 shift/reduce
State 59 conflicts: 9 shift/reduce
State 60 conflicts: 3 shift/reduce
State 80 conflicts: 9 shift/reduce
State 86 conflicts: 3 shift/reduce
State 87 conflicts: 3 shift/reduce
State 88 conflicts: 3 shift/reduce
State 89 conflicts: 3 shift/reduce
State 90 conflicts: 3 shift/reduce
State 91 conflicts: 3 shift/reduce
State 94 conflicts: 9 shift/reduce
State 105 conflicts: 15 shift/reduce
State 121 conflicts: 9 shift/reduce
State 125 conflicts: 15 shift/reduce
State 131 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: /* empty */
    7             | feature
    8             | feature_list feature

    9 feature: OBJECTID ':' TYPEID ';'
   10        | OBJECTID ':' TYPEID ASSIGN expression ';'
   11        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'

   12 formal_list: /* empty */
   13            | formal
   14            | formal_list ',' formal

   15 formal: OBJECTID ':' TYPEID

   16 expression: OBJECTID ASSIGN expression
   17           | expression '.' OBJECTID '(' expression_list ')'
   18           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | OBJECTID '(' expression_list ')'
   20           | IF expression THEN expression ELSE expression FI
   21           | WHILE expression LOOP expression POOL
   22           | WHILE expression LOOP expression error
   23           | WHILE expression error expression POOL
   24           | '{' expression_list '}'
   25           | LET OBJECTID ':' TYPEID IN expression
   26           | LET OBJECTID ':' TYPEID ASSIGN expression IN expression
   27           | CASE expression OF case_list ESAC
   28           | NEW TYPEID
   29           | ISVOID expression
   30           | expression '+' expression
   31           | expression '-' expression
   32           | expression '*' expression
   33           | expression '/' expression
   34           | '~' expression
   35           | expression '<' expression
   36           | expression "<=" expression
   37           | expression '=' expression
   38           | NOT expression
   39           | '(' expression ')'
   40           | OBJECTID
   41           | INT_CONST
   42           | STR_CONST
   43           | BOOL_CONST
   44           | error

   45 expression_list: /* empty */
   46                | expression ';'
   47                | expression_list expression ';'

   48 case_list: case
   49          | case_list case

   50 case: OBJECTID ':' TYPEID DARROW expression ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 17 18 19 39
')' (41) 11 17 18 19 39
'*' (42) 32
'+' (43) 30
',' (44) 14
'-' (45) 31
'.' (46) 17 18
'/' (47) 33
':' (58) 9 10 11 15 25 26 50
';' (59) 4 5 9 10 11 46 47 50
'<' (60) 35
'=' (61) 37
'>' (62)
'@' (64) 18
'{' (123) 4 5 11 24
'}' (125) 4 5 11 24
'~' (126) 34
error (256) 22 23 44
CLASS (258) 4 5
ELSE (259) 20
FI (260) 20
IF (261) 20
IN (262) 25 26
INHERITS (263) 5
LET (264) 25 26
LOOP (265) 21 22
POOL (266) 21 23
THEN (267) 20
WHILE (268) 21 22 23
CASE (269) 27
ESAC (270) 27
OF (271) 27
DARROW (272) 50
NEW (273) 28
ISVOID (274) 29
STR_CONST (275) 42
INT_CONST (276) 41
BOOL_CONST (277) 43
TYPEID (278) 4 5 9 10 11 15 18 25 26 28 50
OBJECTID (279) 9 10 11 15 16 17 18 19 25 26 40 50
ASSIGN (280) 10 16 26
NOT (281) 38
LE (282)
ERROR (283)
"<=" (285) 36


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
class_list (49)
    on left: 2 3, on right: 1 3
class (50)
    on left: 4 5, on right: 2 3
feature_list (51)
    on left: 6 7 8, on right: 4 5 8
feature (52)
    on left: 9 10 11, on right: 7 8
formal_list (53)
    on left: 12 13 14, on right: 11 14
formal (54)
    on left: 15, on right: 13 14
expression (55)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 35 36 37 38 39 40 41 42 43 44, on right: 10 11 16 17 18 20 21
    22 23 25 26 27 29 30 31 32 33 34 35 36 37 38 39 46 47 50
expression_list (56)
    on left: 45 46 47, on right: 17 18 19 24 47
case_list (57)
    on left: 48 49, on right: 27 49
case (58)
    on left: 50, on right: 48 49


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


state 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    OBJECTID  [reduce using rule 6 (feature_list)]
    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 12
    feature       go to state 13


state 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


state 11

    9 feature: OBJECTID . ':' TYPEID ';'
   10        | OBJECTID . ':' TYPEID ASSIGN expression ';'
   11        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 15
    '('  shift, and go to state 16


state 12

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 17

    feature  go to state 18


state 13

    7 feature_list: feature .

    $default  reduce using rule 7 (feature_list)


state 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    OBJECTID  [reduce using rule 6 (feature_list)]
    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 19
    feature       go to state 13


state 15

    9 feature: OBJECTID ':' . TYPEID ';'
   10        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 20


state 16

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 21

    $default  reduce using rule 12 (formal_list)

    formal_list  go to state 22
    formal       go to state 23


state 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 24


state 18

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


state 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 25

    feature  go to state 18


state 20

    9 feature: OBJECTID ':' TYPEID . ';'
   10        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 26
    ';'     shift, and go to state 27


state 21

   15 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 28


state 22

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   14 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 29
    ','  shift, and go to state 30


state 23

   13 formal_list: formal .

    $default  reduce using rule 13 (formal_list)


state 24

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 31


state 26

   10 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    error       shift, and go to state 32
    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '{'         shift, and go to state 45
    '('         shift, and go to state 46

    expression  go to state 47


state 27

    9 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 9 (feature)


state 28

   15 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 48


state 29

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 49


state 30

   14 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 21

    formal  go to state 50


state 31

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 32

   44 expression: error .

    $default  reduce using rule 44 (expression)


state 33

   20 expression: IF . expression THEN expression ELSE expression FI

    error       shift, and go to state 32
    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '{'         shift, and go to state 45
    '('         shift, and go to state 46

    expression  go to state 51


state 34

   25 expression: LET . OBJECTID ':' TYPEID IN expression
   26           | LET . OBJECTID ':' TYPEID ASSIGN expression IN expression

    OBJECTID  shift, and go to state 52


state 35

   21 expression: WHILE . expression LOOP expression POOL
   22           | WHILE . expression LOOP expression error
   23           | WHILE . expression error expression POOL

    error       shift, and go to state 32
    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '{'         shift, and go to state 45
    '('         shift, and go to state 46

    expression  go to state 53


state 36

   27 expression: CASE . expression OF case_list ESAC

    error       shift, and go to state 32
    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '{'         shift, and go to state 45
    '('         shift, and go to state 46

    expression  go to state 54


state 37

   28 expression: NEW . TYPEID

    TYPEID  shift, and go to state 55


state 38

   29 expression: ISVOID . expression

    error       shift, and go to state 32
    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '{'         shift, and go to state 45
    '('         shift, and go to state 46

    expression  go to state 56


state 39

   42 expression: STR_CONST .

    $default  reduce using rule 42 (expression)


state 40

   41 expression: INT_CONST .

    $default  reduce using rule 41 (expression)


state 41

   43 expression: BOOL_CONST .

    $default  reduce using rule 43 (expression)


state 42

   16 expression: OBJECTID . ASSIGN expression
   19           | OBJECTID . '(' expression_list ')'
   40           | OBJECTID .

    ASSIGN  shift, and go to state 57
    '('     shift, and go to state 58

    $default  reduce using rule 40 (expression)


state 43

   38 expression: NOT . expression

    error       shift, and go to state 32
    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '{'         shift, and go to state 45
    '('         shift, and go to state 46

    expression  go to state 59


state 44

   34 expression: '~' . expression

    error       shift, and go to state 32
    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '{'         shift, and go to state 45
    '('         shift, and go to state 46

    expression  go to state 60


state 45

   24 expression: '{' . expression_list '}'

    error       shift, and go to state 32
    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '{'         shift, and go to state 45
    '('         shift, and go to state 46

    error       [reduce using rule 45 (expression_list)]
    IF          [reduce using rule 45 (expression_list)]
    LET         [reduce using rule 45 (expression_list)]
    WHILE       [reduce using rule 45 (expression_list)]
    CASE        [reduce using rule 45 (expression_list)]
    NEW         [reduce using rule 45 (expression_list)]
    ISVOID      [reduce using rule 45 (expression_list)]
    STR_CONST   [reduce using rule 45 (expression_list)]
    INT_CONST   [reduce using rule 45 (expression_list)]
    BOOL_CONST  [reduce using rule 45 (expression_list)]
    OBJECTID    [reduce using rule 45 (expression_list)]
    NOT         [reduce using rule 45 (expression_list)]
    '~'         [reduce using rule 45 (expression_list)]
    '{'         [reduce using rule 45 (expression_list)]
    '}'         reduce using rule 45 (expression_list)
    '('         [reduce using rule 45 (expression_list)]

    expression       go to state 61
    expression_list  go to state 62


state 46

   39 expression: '(' . expression ')'

    error       shift, and go to state 32
    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '{'         shift, and go to state 45
    '('         shift, and go to state 46

    expression  go to state 63


state 47

   10 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   17 expression: expression . '.' OBJECTID '(' expression_list ')'
   18           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . "<=" expression
   37           | expression . '=' expression

    '<'   shift, and go to state 64
    '='   shift, and go to state 65
    '+'   shift, and go to state 66
    '-'   shift, and go to state 67
    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    ';'   shift, and go to state 70
    '.'   shift, and go to state 71
    '@'   shift, and go to state 72
    "<="  shift, and go to state 73


state 48

   15 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 15 (formal)


state 49

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 74


state 50

   14 formal_list: formal_list ',' formal .

    $default  reduce using rule 14 (formal_list)


state 51

   17 expression: expression . '.' OBJECTID '(' expression_list ')'
   18           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   20           | IF expression . THEN expression ELSE expression FI
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . "<=" expression
   37           | expression . '=' expression

    THEN  shift, and go to state 75
    '<'   shift, and go to state 64
    '='   shift, and go to state 65
    '+'   shift, and go to state 66
    '-'   shift, and go to state 67
    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    '.'   shift, and go to state 71
    '@'   shift, and go to state 72
    "<="  shift, and go to state 73


state 52

   25 expression: LET OBJECTID . ':' TYPEID IN expression
   26           | LET OBJECTID . ':' TYPEID ASSIGN expression IN expression

    ':'  shift, and go to state 76


state 53

   17 expression: expression . '.' OBJECTID '(' expression_list ')'
   18           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   21           | WHILE expression . LOOP expression POOL
   22           | WHILE expression . LOOP expression error
   23           | WHILE expression . error expression POOL
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . "<=" expression
   37           | expression . '=' expression

    error  shift, and go to state 77
    LOOP   shift, and go to state 78
    '<'    shift, and go to state 64
    '='    shift, and go to state 65
    '+'    shift, and go to state 66
    '-'    shift, and go to state 67
    '*'    shift, and go to state 68
    '/'    shift, and go to state 69
    '.'    shift, and go to state 71
    '@'    shift, and go to state 72
    "<="   shift, and go to state 73


state 54

   17 expression: expression . '.' OBJECTID '(' expression_list ')'
   18           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   27           | CASE expression . OF case_list ESAC
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . "<=" expression
   37           | expression . '=' expression

    OF    shift, and go to state 79
    '<'   shift, and go to state 64
    '='   shift, and go to state 65
    '+'   shift, and go to state 66
    '-'   shift, and go to state 67
    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    '.'   shift, and go to state 71
    '@'   shift, and go to state 72
    "<="  shift, and go to state 73


state 55

   28 expression: NEW TYPEID .

    $default  reduce using rule 28 (expression)


state 56

   17 expression: expression . '.' OBJECTID '(' expression_list ')'
   18           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   29           | ISVOID expression .
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . "<=" expression
   37           | expression . '=' expression

    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    '.'   shift, and go to state 71
    '@'   shift, and go to state 72
    "<="  shift, and go to state 73

    '.'       [reduce using rule 29 (expression)]
    '@'       [reduce using rule 29 (expression)]
    "<="      [reduce using rule 29 (expression)]
    $default  reduce using rule 29 (expression)


state 57

   16 expression: OBJECTID ASSIGN . expression

    error       shift, and go to state 32
    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '{'         shift, and go to state 45
    '('         shift, and go to state 46

    expression  go to state 80


state 58

   19 expression: OBJECTID '(' . expression_list ')'

    error       shift, and go to state 32
    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '{'         shift, and go to state 45
    '('         shift, and go to state 46

    error       [reduce using rule 45 (expression_list)]
    IF          [reduce using rule 45 (expression_list)]
    LET         [reduce using rule 45 (expression_list)]
    WHILE       [reduce using rule 45 (expression_list)]
    CASE        [reduce using rule 45 (expression_list)]
    NEW         [reduce using rule 45 (expression_list)]
    ISVOID      [reduce using rule 45 (expression_list)]
    STR_CONST   [reduce using rule 45 (expression_list)]
    INT_CONST   [reduce using rule 45 (expression_list)]
    BOOL_CONST  [reduce using rule 45 (expression_list)]
    OBJECTID    [reduce using rule 45 (expression_list)]
    NOT         [reduce using rule 45 (expression_list)]
    '~'         [reduce using rule 45 (expression_list)]
    '{'         [reduce using rule 45 (expression_list)]
    '('         [reduce using rule 45 (expression_list)]
    ')'         reduce using rule 45 (expression_list)

    expression       go to state 61
    expression_list  go to state 81


state 59

   17 expression: expression . '.' OBJECTID '(' expression_list ')'
   18           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . "<=" expression
   37           | expression . '=' expression
   38           | NOT expression .

    '<'   shift, and go to state 64
    '='   shift, and go to state 65
    '+'   shift, and go to state 66
    '-'   shift, and go to state 67
    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    '.'   shift, and go to state 71
    '@'   shift, and go to state 72
    "<="  shift, and go to state 73

    '<'       [reduce using rule 38 (expression)]
    '='       [reduce using rule 38 (expression)]
    '+'       [reduce using rule 38 (expression)]
    '-'       [reduce using rule 38 (expression)]
    '*'       [reduce using rule 38 (expression)]
    '/'       [reduce using rule 38 (expression)]
    '.'       [reduce using rule 38 (expression)]
    '@'       [reduce using rule 38 (expression)]
    "<="      [reduce using rule 38 (expression)]
    $default  reduce using rule 38 (expression)


state 60
